@@ -1,0 +1,44 @@
+#节日/纪念日、农历节气表。
+
+#公历
+[SOLAR] 
+0101=元旦
+0214=情人节
+0308=妇女节
+0312=植树节
+0315=消费者
+0401=愚人节
+0422=地球日
+0501=劳动节
+0504=青年节
+0601=儿童节
+0801=建军节
+0910=教师节
+0918=九一八
+1001=国庆节
+1006=老人节
+1224=平安夜
+1123=生日
+1225=圣诞节
+
+#公历
+[LUNAR]
+0101=春节
+0115=元宵
+0505=端午
+0624=火把节
+0625=火把节
+0626=火把节
+0707=七夕
+0715=中元节
+0815=中秋
+0909=重阳
+1208=腊八
+1223=小年
+0100=除夕
+
+#周
+[WEEK]
+0520=母亲节
+0630=父亲节
+1144=感恩节
